preflight/impl/tests/ui/fail-invalid-impl.stderr
error: cannot negate the `Avionics` implementation
  --> $DIR/fail-invalid-impl.rs:12:6
   |
12 | impl !Avionics for Controller {
   |      ^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-invalid-impl.rs:1:40
  |
1 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
